fix(mds-tab): fix overflow effect tab

--- a/projects/stencil/src/components/mds-tab/mds-tab.css
+++ b/projects/stencil/src/components/mds-tab/mds-tab.css
@@ -19,11 +19,14 @@
  * @prop --mds-tab-scroll-scrollbar-size: Sets the height and width of the browser scroll bar (if supported)
  * @prop --mds-tab-scroll-scrollbar-thumb-background: Sets the background-color of the browser scroll bar thumb (if supported)
  * @prop --mds-tab-scroll-scrollbar-track-background: Sets the background-color of the browser scroll bar track (if supported)
+ * @prop --mds-tab-slide-delay: Sets the sliding delay of the tabs
  * @prop --mds-tab-tabs-background: Sets the `background-color` of `mds-tab::part(tabs)`
  * @prop --mds-tab-tabs-gap: Sets the `gap` of `mds-tab::part(tabs)`
- * @prop --mds-tab-tabs-wrapper-outline-opacity: Sets the `opacity` of outline border which holds
+ * @prop --mds-tab-tabs-overflow-shadow-size: Sets overflow shadow size
+ * @prop --mds-tab-tabs-overflow-shadow: Sets the overflow shadow effect
  * @prop --mds-tab-tabs-padding: Sets the `padding` of `mds-tab::part(tabs)`
  * @prop --mds-tab-tabs-radius: Sets the `border-radius` of `mds-tab::part(tabs)`
+ * @prop --mds-tab-tabs-wrapper-outline-opacity: Sets the `opacity` of outline border which holds
  */
 
 :host {
@@ -54,6 +57,7 @@
   --mds-tab-tabs-wrapper-shadow: 0 0 0 2px var(--mds-tab-tabs-wrapper-shadow-color) inset;
   --mds-tab-transition-duration: 0.5s;
   --mds-tab-transition-timing-function: theme('transitionTimingFunction.out-expo');
+  --mds-tab-slide-delay: 0.25s;
 
   display: grid;
 }
